--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+
+
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +40,12 @@
     transform: rotate(360deg);
   }
 }
+
+/* //ADDITIONS */
+
+
+/* nathalie added */
+.row{
+  margin:0 !important
+}
+/* nathalie added */
