--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background-color: #f5f5f5;
-  fontFamily: "'Source Sans Pro', sans-serif",
+  fontFamily: "'Source Sans Pro', sans-serif";
+  font-size:62.5%
 }
 
 /* //ADDITIONS */
